--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,4 +1,5 @@
 FROM ubuntu:16.04
+RUN apt-get update && apt-get install -yq jq
 COPY ./resin-image-flasher-unwrap /bin
 RUN chmod a+x /bin/resin-image-flasher-unwrap
 CMD /bin/resin-image-flasher-unwrap
